--- a/form/qltdl/DTO/DTO.csproj
+++ b/form/qltdl/DTO/DTO.csproj
@@ -98,6 +98,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>qltdl.edmx</DependentUpon>
     </Compile>
+    <Compile Include="sysdiagram.cs">
+      <DependentUpon>qltdl.tt</DependentUpon>
+    </Compile>
     <Compile Include="TGTOUR.cs">
       <DependentUpon>qltdl.tt</DependentUpon>
     </Compile>
