--- a/form/qltdl/DTO/DTO.csproj
+++ b/form/qltdl/DTO/DTO.csproj
@@ -102,6 +102,7 @@
       <DependentUpon>qltdl.tt</DependentUpon>
     </Compile>
     <Compile Include="nvmodel.cs" />
+    <Compile Include="tktour.cs" />
     <Compile Include="TOUR.cs">
       <DependentUpon>qltdl.tt</DependentUpon>
     </Compile>
