--- a/form/qltdl/qltdl/GUI.csproj
+++ b/form/qltdl/qltdl/GUI.csproj
@@ -109,6 +109,10 @@
       <Project>{8f968c41-cfdf-4f83-8182-e83ea1864b41}</Project>
       <Name>BUS</Name>
     </ProjectReference>
+    <ProjectReference Include="..\DTO\DTO.csproj">
+      <Project>{4af9a138-d8ae-4fe2-b007-14ea3f76f62f}</Project>
+      <Name>DTO</Name>
+    </ProjectReference>
     <ProjectReference Include="..\viewmodel\viewmodel.csproj">
       <Project>{3a10600a-f041-4f0b-b6aa-09cf695960ba}</Project>
       <Name>viewmodel</Name>
