--- a/form/qltdl/qltdl_web/Views/Web.config
+++ b/form/qltdl/qltdl_web/Views/Web.config
@@ -35,8 +35,10 @@
   <system.web>
     <compilation>
       <assemblies>
-        <add assembly="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Web.Mvc, Culture=neutral, Version=5.2.3.0, PublicKeyToken=31BF3856AD364E35" />
       </assemblies>
     </compilation>
+    
   </system.web>
+ 
 </configuration>
